# change_detection

./: .gitignore  CMakeLists.txt  LICENSE  package.xml
change_detection/: CMakeLists.txt  README  package.xml
change_detection/bash/: add_gps_exif.sh  create_initial_dir-ag.sh  create_initial_dir-rgbd.sh  generate_nerfstudio_image-nodepth.sh  generate_nerfstudio_image.sh  prepare_dir-nodepth.sh  prepare_dir.sh  register_new_images-nodepth.sh  register_new_images.sh  rotate_images.sh
change_detection/scripts/change_detection/: add_depth_to_transforms.py  blur_filter.py  change_detect_common.py  clip_sam_segmentation.py  clip_segmentation.py  colmap_to_json.py  convert_transforms_to_pose.py  dino_segmentation.py  hybrid_segmentation.py  image_by_image_comparison.py  list_images_in_database.py  omdet_segmentation.py  owl_segmentation.py  render_transform.py  rgbd_image_saver.py  score_image_blur.py  segmentation.py  test_single_pair.py  update_gps_coords.py  yolo_segmentation.py  yolo_world_segmentation.py
change_nerf_utils/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
change_nerf_utils/bash/: create_initial_dir-rgbd.sh  create_initial_dir-specAI.sh  generate_nerfstudio_image-nodepth.sh  generate_nerfstudio_image.sh  is_home_set.sh  prepare_change_detection-specAI.sh  register_new_images-nodepth.sh  register_new_images.sh  rotate_images180.sh  tmp.sh
change_nerf_utils/src/change_nerf_utils/: colmap_to_json.py  convert_images_txt_to_pose.py  eval_transforms.py  export_sensorlogger_pose.py  extract_camera_gps.py  generate_initial_poses.py  grid.py  image_saver.py  image_set.py  render_transform.py
change_pcloud_utils/: README.md  setup.cfg
change_pcloud_utils/src/change_pcloud_utils/: colmap_to_labeled_change_images.py  colmap_utils.py  draw_pcloud.py  llm_client_utils.py  llm_query_tools.py  map_utils.py  merge_annotations.py  pcloud_cluster_utils.py  pcloud_creation_utils.py  pcloud_to_mesh.py  plot_transforms.py  rgbd_file_list.py  tmp.py  visualize_colmap.py  visualize_pcloud_overlay.py  visualize_robot.py
llm_evaluation/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
llm_evaluation/bash/: run_llm_eval.sh
llm_evaluation/scripts/llm_evaluation/: llama_room_eval.py  nvidia_llama.py  ollama_eval_clusters.py  query_generation.py  room_evaluation.py  summary_evaluation.py  tmp.py  two_query_evaluator.py
llm_evaluation/src/llm_evaluation/: llm_client.py  llm_query_tools.py  llm_server.py  ollama_lib.py  ollama_test.py  task_selection.py  vlm.py
pcloud_models/: CMakeLists.txt  package.xml  setup.py
pcloud_models/bash/: prepare_labelling.sh  register_all.sh  run_clip_modeling-random.sh  run_clip_modeling.sh  run_labelling.sh  unpack_all.sh
pcloud_models/launch/: register.launch  xyz.launch
pcloud_models/scripts/pcloud_models/: =0.26.0  =9.3.0  CASE.py  baseline_evaluation.py  build_clouds_from_phone.py  cluster_change.py  colmap_utils.py  create_pcloud.py  determine_relationship.py  draw_clusters.A_cylindrical_container_with_a_neck..1918.ply  draw_clusters.bottle.3557.ply  draw_pcloud.py  find_changes.py  hybrid_multi_query.py  hybrid_scannet_processing_multi.py  label_by_color.py  labelling.py  map_from_scannet.py  map_utils.py  map_utils_hybrid.py  object_pcloud_from_scannet.py  pcloud_cluster_utils.py  pcloud_creation_utils.py  pcloud_to_mesh.py  phone_to_labeled_images.py  (+15 more)
segmentation_utils/: README.md  setup.cfg
(+91 files in other folders)
