<?xml version="1.0"?>
<package format="2">
  <name>change_detection</name>
  <version>0.0.0</version>
  <description>The change_detection package</description>
  <maintainer email="emartinso@ltu.edu">Eric Martinson</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf</exec_depend>
  <export>
  </export>
</package>
