[metadata]
name = change_nerf_utils
version = 0.1.0
description = "Utilities for training NeRF models for change detection"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Eric Martinson

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8,<3.9
install_requires = 
    nerfstudio