[metadata]
name = change_pcloud_utils
version = 0.1.0
description = "Utilities for creating and processing point clouds for change detection"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Eric Martinson

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10,<3.11
install_requires = 
    numpy
    transformers
    ultralytics
    opencv-python
    pillow
    pickle

