[metadata]
name = llm_evaluation
version = 0.1.0
description = "LLM client/server routines"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Eric Martinson

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10,<3.11
install_requires = 
    opencv-python
    pillow
    ollama=0.5.1

