[metadata]
name = segmentation_utils
version = 0.1.0
description = "Segmentation utilities - middleware interface for huggingface libraries"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Eric Martinson

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    numpy
    transformers
    ultralytics
    opencv-python
    pillow
    pickle

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    segmentation-utils-cli = segmentation_utils.cli:main
